examples/regressions/146_invalid_int_type.an
a: Num String = 3

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/146_invalid_int_type.an:1:17
// 1 | a: Num String = 3	// error: Type annotation Num String does not match the inferred type I32
//   |                 ^
// 
// Found 1 error and 0 warnings

